syntax = "proto3";

package file_service;
option go_package = "./api/proto";

import "google/protobuf/timestamp.proto";

service FileService{
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse);
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
}

message UploadFileRequest {
  oneof data {
    FileInfo info = 1;
    bytes chunk_data = 2;
  }
}

message FileInfo {
  string filename = 1;
  string content_type = 2;
}

message UploadFileResponse{
  string id = 1;
  string filename = 2;
  uint32 size = 3;
}

message DownloadFileRequest {
  string filename = 1;
}

message DownloadFileResponse {
  bytes chunk_data = 1;
}

message ListFilesRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListFilesResponse{
  repeated FileMetadata files = 1;
  int32 total_count = 2;
}

message FileMetadata {
  string filename = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  uint32 size = 4;
}